# endstone_better_stop

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/endstone_better_stop/: __init__.py  better_stop.py  config.toml
