[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-better-stop"
version = "0.1.0"
dependencies = []
authors = [
    { name = "Endstone Developers", email = "hello@endstone.dev" },
    { name = "Huang FTS427", email = "FTS427@outlook.com" },
]
description = "Better stop server command"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/ZH-Server/endstone_better_stop"

[project.entry-points."endstone"]
better_stop = "endstone_better_stop:BetterStop"